--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -4713,6 +4713,9 @@
         }
       }
     },
+    "人机验证已完成" : {
+
+    },
     "令枫" : {
       "localizations" : {
         "en" : {
@@ -4745,6 +4748,9 @@
 
     },
     "可选, 最多9个" : {
+
+    },
+    "国际冠字码" : {
 
     },
     "在使用本 App 前，您需要先知晓以下信息：\n· 本 App 由第三方开发者以及部分社区用户贡献，与哔哩哔哩无合作关系，哔哩哔哩是上海宽娱数码科技有限公司的商标。\n· 本 App 并不是哔哩哔哩的替代品，我们建议您在能够使用官方客户端时尽量使用官方客户端。\n· 本 App 均使用来源于网络的公开信息进行开发。\n· 本 App 中和B站相关的功能完全免费\n· 本 App 中所呈现的B站内容来自哔哩哔哩官方。\n· 本 App 的开发者、负责人和实际责任人是%@\n  联系QQ：3245146430" : {
@@ -4781,10 +4787,28 @@
     "我的" : {
 
     },
+    "手机号" : {
+
+    },
     "推荐" : {
 
     },
+    "登录" : {
+
+    },
     "稿件" : {
+
+    },
+    "第一步: 手机号信息" : {
+
+    },
+    "第三步: 验证码" : {
+
+    },
+    "第二步: 人机验证" : {
+
+    },
+    "获取验证码" : {
 
     },
     "要使用动态小尾巴吗?" : {
@@ -4793,10 +4817,16 @@
     "详情" : {
 
     },
+    "进行人机验证" : {
+
+    },
     "选择图片" : {
 
     },
     "重新载入" : {
+
+    },
+    "验证码" : {
 
     }
   },
