--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -4736,6 +4736,33 @@
           }
         }
       }
+    },
+    "将不再记录您的屏幕使用时间, 已记录的数据不会被删除" : {
+
+    },
+    "开启“屏幕使用时间”" : {
+
+    },
+    "番剧" : {
+
+    },
+    "直播" : {
+
+    },
+    "确认" : {
+
+    },
+    "视频" : {
+
+    },
+    "视频下载列表" : {
+
+    },
+    "神秘代码" : {
+
+    },
+    "这里空空如也" : {
+
     }
   },
   "version" : "1.0"
