Updated ios app

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -97,9 +97,6 @@
         }
       }
     },
-    "“屏幕使用时间”会记录您每天使用喵哩喵哩的时间并作出统计" : {
-
-    },
     "%@" : {
       "localizations" : {
         "en" : {
@@ -4784,6 +4781,9 @@
     "应用" : {
 
     },
+    "开启“屏幕使用时间”" : {
+
+    },
     "您可以更改默认的小尾巴内容, 如果不想添加小尾巴, 请清空上方文本框内容. 您可以随时在设置中更改此内容" : {
 
     },
@@ -4833,7 +4833,31 @@
 
     },
     "验证码" : {
-        
+
+    },
+    "" : {
+
+    },
+    "" : {
+
+    },
+    "" : {
+
+    },
+    "" : {
+
+    },
+    "" : {
+
+    },
+    "" : {
+
+    },
+    "" : {
+
+    },
+    "" : {
+
     }
   },
   "version" : "1.0"
